--- a/public/posts/java-spring-boot-api-overview.mdx
+++ b/public/posts/java-spring-boot-api-overview.mdx
@@ -59,7 +59,7 @@ Close the GitHub repository with the following command:
 git clone https://github.com/gary-archer/oauth.apisample.javaspringboot
 ```
 
-![repo](../images/350/repo.jpg)
+![repo](../images/350/repo.jpg?v=20251121)
 
 ### Step 2: Create SSL Certificates
 
@@ -98,7 +98,7 @@ Next run the API:
 
 The Spring Boot HTTP server then listens on HTTPS port 446:
 
-![running api](../images/350/running-api.jpg?v=20240915)
+![running api](../images/350/running-api.jpg?v=20251121)
 
 You can then navigate to the following URL in a browser without any SSL trust warnings:
 
