--- a/public/posts/net-core-code-sample-overview.mdx
+++ b/public/posts/net-core-code-sample-overview.mdx
@@ -80,7 +80,7 @@ Close the GitHub repository with the following command:
 git clone https://github.com/gary-archer/oauth.apisample.netcore
 ```
 
-![repo](../images/320/repo.jpg)
+![repo](../images/320/repo.jpg?v=20251121)
 
 Next run the API:
 
