--- a/public/posts/about.mdx
+++ b/public/posts/about.mdx
@@ -8,7 +8,7 @@ I wrote this blog's main content from 2017-2019, with a focus on non-functional 
 
 ### Blog Technology
 
-The content runs as a basic NEXT.js blog. When built, I can deploy its static content to AWS CloudFront and ~400 global locations, to ensure globally equal performance. The blog runs as a public website and does not use secured data or call APIs. For web applications that use sensitive data I prefer an SPA architecture.
+The content runs as a basic NEXT.js blog. When built, I can deploy its static content to AWS CloudFront and hundreds of global locations, to ensure globally equal performance. The blog runs as a public website and does not use secured data or call APIs. For web applications that use sensitive data I prefer an SPA architecture.
 
 ### Next
 
