--- a/public/posts/final-spa-overview.mdx
+++ b/public/posts/final-spa-overview.mdx
@@ -14,7 +14,7 @@ The final SPA improves on the previous <a href='improved-spa-code-sample-overvie
 
 ### Cloud Hosting
 
-I deploy the overall system of the SPA and APIs to AWS. I upload the SPA's web static content to S3, then CloudFront replicates the web resources to ~400 global locations, without the need to manage servers or containers:
+I deploy the overall system of the SPA and APIs to AWS. I upload the SPA's web static content to S3, then CloudFront replicates the web resources to hundreds of global locations, without the need to manage servers or containers:
 
 ![aws technologies](../images/220/aws-technologies.jpg)
 
