--- a/public/posts/reactjs-codingkeypoints.mdx
+++ b/public/posts/reactjs-codingkeypoints.mdx
@@ -555,7 +555,7 @@ public async execute(action: () => Promise<void>): Promise<void> {
 
 The final SPA deals reliably with some tricky areas, in the lower-level plumbing classes. Some of these could be turned into a shared library, which would reduce code. In a real organization the goal would be to grow the web code base by adding new view and view model classes. An early focus on security, development setups, deployment and reliability helps to enable this.
 
-There is one remaining post for this blog's final SPA. It is part of the cloud theme and covers <a href='cdn-static-content-delivery.mdx'>Web Content Delivery</a> using a cloud platform. The SPA's static content gets uploaded to a content delivery network which deploys it to ~400 global locations for globally equal performance. The SPA's deployment is also portable and runs the same anywhere, including a development computer.
+There is one remaining post for this blog's final SPA. It is part of the cloud theme and covers <a href='cdn-static-content-delivery.mdx'>Web Content Delivery</a> using a cloud platform. The SPA's static content gets uploaded to a content delivery network which deploys it to hundreds of global locations for globally equal performance. The SPA's deployment is also portable and runs the same anywhere, including a development computer.
 
 ### Where Are We?
 
