--- a/public/posts/cdn-static-content-delivery.mdx
+++ b/public/posts/cdn-static-content-delivery.mdx
@@ -295,7 +295,7 @@ The *index.html* file must always be invalidated. It is requested every time the
 
 ### Where Are We?
 
-I completed this blog's SPA work by deploying its static content to ~400 global locations while also following some security and reliability best practices. Web deployments within an OAuth architecture should be technically simple and entirely separated from the API side of the architecure. You then provide good web performance to all users in an easy to manage way.
+I completed this blog's SPA work by deploying its static content to hundreds of global locations while also following some security and reliability best practices. Web deployments within an OAuth architecture should be technically simple and entirely separated from the API side of the architecure. You then provide good web performance to all users in an easy to manage way.
 
 ### Next
 
