--- a/public/posts/android-https-debugging.mdx
+++ b/public/posts/android-https-debugging.mdx
@@ -10,7 +10,7 @@ First, I configure and run an HTTP proxy on the host computer, as the <a href='h
 
 Connected emulators and devices share a network with the host computer, like the built-in emulator network or a WiFi network. The following commands can provide the host computer's IP v4 address. Some Android emulators may instead use a special IP address of *10.0.2.2* for the host computer.
 
-```markdown
+```bash
 ifconfig
 ip addr show
 ```
