--- a/public/posts/android-infrastructure-setup.mdx
+++ b/public/posts/android-infrastructure-setup.mdx
@@ -75,7 +75,7 @@ The *mobile.authsamples.com* S3 bucket has a *.well-known* folder containing the
 
 We can verify the assets file via a test site that Google provides, and check that results do not contain any errors:
 
-```markdown
+```http
 https://digitalassetlinks.googleapis.com/v1/statements:list?source.web.site=https://mobile.authsamples.com&relation=delegate_permission/common.handle_all_urls
 ```
 
