--- a/public/posts/basicspa-execution.mdx
+++ b/public/posts/basicspa-execution.mdx
@@ -167,7 +167,7 @@ The first API call is to *http://api.authsamples-dev.com/api/companies*, and if 
 
 You can click one of the *View Transactions* links to navigate to the SPA's second view. Alternatively, you can type the following format of URL into the browser's address bar:
 
-```markdown
+```http
 http://localhost/spa/#company=2
 ```
 
