--- a/public/posts/ios-https-debugging.mdx
+++ b/public/posts/ios-https-debugging.mdx
@@ -10,7 +10,7 @@ First, I configure and run an HTTP proxy on the host computer, as the <a href='h
 
 Connected simulators and devices share a network with the host computer, like the built-in simulator network or a WiFi network. The following commands can provide the host computer's IP v4 address.
 
-```markdown
+```bash
 ifconfig
 ip addr show
 ```
