--- a/public/posts/java-spring-boot-api-overview.mdx
+++ b/public/posts/java-spring-boot-api-overview.mdx
@@ -102,7 +102,7 @@ The Spring Boot HTTP server then listens on HTTPS port 446:
 
 You can then navigate to the following URL in a browser without any SSL trust warnings:
 
-```markdown
+```http
 https://api.authsamples-dev.com:446/investments/companies
 ```
 
