--- a/public/posts/serverless-api-overview.mdx
+++ b/public/posts/serverless-api-overview.mdx
@@ -106,7 +106,7 @@ Serverless Offline then exposes the API's HTTPS endpoints on port 446:
 
 You can then use local URLs such as the following to call the API:
 
-```markdown
+```http
 https://api.authsamples-dev.com:446/investments/companies
 ```
 
