--- a/public/posts/android-code-sample-overview.mdx
+++ b/public/posts/android-code-sample-overview.mdx
@@ -128,17 +128,10 @@ The app supports navigation via deep linking where a user can follow an *HTTPS A
 
 A deep link could point to an unauthorized or invalid resource, as demonstrated by the last two examples below:
 
-```markdown
-// A deep link to the home page
+```http
 https://mobile.authsamples.com/finalmobileapp/deeplink
-
-// A deep link to the transactions for company 2
 https://mobile.authsamples.com/finalmobileapp/deeplink/companies/2
-
-// A deep link to an unauthorized resource
 https://mobile.authsamples.com/finalmobileapp/deeplink/companies/3
-
-// A deep link to an invalid resource
 https://mobile.authsamples.com/finalmobileapp/deeplink/companies/abc
 ```
 
