--- a/public/posts/net-core-code-sample-overview.mdx
+++ b/public/posts/net-core-code-sample-overview.mdx
@@ -94,7 +94,7 @@ The .NET HTTP server then listens on HTTPS port 446:
 
 You can then navigate to the following URL in a browser without any SSL trust warnings:
 
-```markdown
+```http
 https://api.authsamples-dev.com:446/investments/companies
 ```
 
