--- a/public/posts/serverless-api-deployment.mdx
+++ b/public/posts/serverless-api-deployment.mdx
@@ -32,7 +32,7 @@ service: serverlessapi
 
 provider:
   name: aws
-  runtime: nodejs22.x
+  runtime: nodejs24.x
   region: eu-west-2
   apiGateway:
     shouldStartNameWithService: true
@@ -57,8 +57,17 @@ The Serverless API uses the same JSON based approach to configuration as earlier
     },
     "logging": {
         "apiName": "FinalApi",
-        "prettyPrint": false,
-        "performanceThresholdMilliseconds": 500
+        "loggers": [
+            {
+                "type": "request",
+                "performanceThresholdMilliseconds": 500,
+                "prettyPrint": false
+            },
+            {
+                "type": "audit",
+                "prettyPrint": false
+            }
+        ]
     },
     "oauth": {
         "issuer":                       "https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9",
