--- a/public/posts/azure-active-directory-setup.mdx
+++ b/public/posts/azure-active-directory-setup.mdx
@@ -248,7 +248,7 @@ certs/authsamples-dev.ca.crt
 
 ### Step 12. Build and Run the SPA and API
 
-Next run the following script, to build the code and run the API over SSL on port 443. The default browser then runs at *https://www.authsamples-dev.com/spa/*. The SPA redirects to Entra ID and you can sign in with one of the test user accounts:
+Next, run the following script, to build the code and run the API over SSL on port 443. The default browser then runs at *https://www.authsamples-dev.com/spa/*. The SPA redirects to Entra ID and you can sign in with one of the test user accounts:
 
 ```bash
 ./build.sh && ./run.sh
