--- a/public/posts/improved-spa-code-sample-overview.mdx
+++ b/public/posts/improved-spa-code-sample-overview.mdx
@@ -121,7 +121,7 @@ certs/authsamples-dev.ca.crt
 
 ### Step 6. Build and Run the SPA and API
 
-Next run the following script, to build the code and run the API over SSL on port 443. The default browser then runs at *https://www.authsamples-dev.com/spa*.
+Next, run the following script, to build the code and run the API over SSL on port 443. The default browser then runs at *https://www.authsamples-dev.com/spa*.
 
 ```bash
 ./build.sh && ./run.sh
