--- a/public/posts/java-spring-boot-api-overview.mdx
+++ b/public/posts/java-spring-boot-api-overview.mdx
@@ -90,7 +90,7 @@ sudo "$JAVA_HOME/bin/keytool" -delete -alias authsamples.ca -cacerts -storepass 
 
 ### Step 3: Run the API
 
-Next run the API:
+Next, run the API:
 
 ```bash
 ./start.sh
@@ -117,7 +117,7 @@ To run JUnit tests, the API must be pointed to a mock authorization server, so m
 ./testsetup.sh
 ```
 
-Next run tests with the following command:
+Next, run tests with the following command:
 
 ```bash
 ./gradlew test
