--- a/public/posts/index.mdx
+++ b/public/posts/index.mdx
@@ -62,7 +62,7 @@ The next theme focuses on the API architecture. This includes coding aspects rel
 - <a href='api-journey-server-side.mdx'>API Journey - Server Side</a>
 - <a href='api-journey-client-side.mdx'>API Journey - Client Side</a>
 
-**Supportability**
+**Reliability**
 
 - <a href='effective-api-logging.mdx'>Effective API Logging</a>
 - <a href='error-handling-and-supportability.mdx'>Error Handling and Supportability</a>
