--- a/public/posts/net-core-code-sample-overview.mdx
+++ b/public/posts/net-core-code-sample-overview.mdx
@@ -55,7 +55,7 @@ Close the GitHub repository with the following command:
 git clone https://github.com/gary-archer/oauth.apisample.net
 ```
 
-![repo](../images/320/repo.jpg)
+![repo](../images/320/repo.jpg?v=20251217)
 
 ### Step 2: Create SSL Certificates
 
